Add light box symbols. Clarify a statement about n-Queen problem.

--- a/tutorials/backtrack.ipynb
+++ b/tutorials/backtrack.ipynb
@@ -52,12 +52,16 @@
    "source": [
     "# $n$-Queens problem\n",
     "\n",
-    "In this section we provide a pythonic implementation of the $n$-Queens problem, using the approach described by [Ruskey][ruskey] in Chapter 3 of his book [Combinatorial Generation][cg]. We use three *bit masks*, namely integers, to represent whether a row, a raising $\\nearrow$ and a falling $\\searrow$ diagonal are \"under attack\" by an already placed queen, instead of three boolean arrays. It is sufficient to use *one* bit only to represent that a cell on a diagonal is under attack because:\n",
+    "In this section we provide a pythonic implementation of the $n$-Queens problem, using the approach described by [Ruskey][ruskey] in Chapter 3 of his book [Combinatorial Generation][cg]. We use three *bit masks*, namely integers, to represent whether a row, a raising $\\nearrow$ and a falling $\\searrow$ diagonal are \"under attack\" by an already placed queen, instead of three boolean arrays. It is sufficient to use *one* bit only to represent that a cell on a diagonal is under attack because, namely *to each diagonal is associated one bit* according to:\n",
     "\n",
-    "   - if the diagonal is raising, call it $d_\\nearrow$, then $a_{r_{1}, c_{1}}\\in d_\\nearrow \\wedge a_{r_{2}, c_{2}} \\in d_\\nearrow$ if and only if $r_{1}+c_{1}=r_{2}+c_{2}$; in words, the sum of the row and column indices is constant along raising diagonals.\n",
-    "   - if the diagonal is falling, call it $d_\\searrow$, then $a_{r_{1}, c_{1}}\\in d_\\searrow \\wedge a_{r_{2}, c_{2}} \\in d_\\searrow$ if and only if $c_{1}-r_{1}=c_{2}-r_{2}$; in words, the difference of the column and row indices is constant along falling diagonals.\n",
+    "   - if such diagonal is raising, call it $d_\\nearrow$, then $a_{r_{1}, c_{1}}\\in d_\\nearrow \\wedge a_{r_{2}, c_{2}} \\in d_\\nearrow$ if and only if $r_{1}+c_{1}=r_{2}+c_{2}$; in words, the sum of the row and column indices is constant along raising diagonals; therefore, diagonal $d_\\nearrow$ is associated to the bit in position $r_{1}+c_{1}$ of a suitable bitmask.\n",
+    "   - if such diagonal is falling, call it $d_\\searrow$, then $a_{r_{1}, c_{1}}\\in d_\\searrow \\wedge a_{r_{2}, c_{2}} \\in d_\\searrow$ if and only if $c_{1}-r_{1}=c_{2}-r_{2}$; in words, the difference of the column and row indices is constant along falling diagonals; therefore, diagonal $d_\\searrow$ is associated to the bit in position  $c_{1}-r_{1}$, call it $p$, of a suitable bitmask. In order to be consistent, if $c_{1}-r_{1} < 0$ then take the difference modulo $2n-1$, where $n$ is the number of rows (and columns), namely:\n",
+    "   $$\n",
+    "       p_{n-1}\\,p_{n-2}\\,\\ldots\\,p_{0}p_{-1}\\,p_{-2}\\,\\ldots\\,p_{-(n-1)} \\rightarrow \n",
+    "       p_{-1\\mod(2n-1)=2n-2}\\,p_{-2\\mod(2n-1)=2n-3}\\,\\ldots\\,p_{-(n-1)\\mod(2n-1)=n}p_{n-1}\\,p_{n-2}\\,\\ldots\\,p_{0}\n",
+    "   $$\n",
     "   \n",
-    "Here's the code:\n",
+    "where rows and cols indexes range in $\\lbrace 0,\\ldots,n-1 \\rbrace$; in both cases, it is necessary a bitmask $2n-1$ bits long. Here's the code:\n",
     "\n",
     "[ruskey]:http://webhome.cs.uvic.ca/~ruskey/\n",
     "[cg]:http://www.1stworks.com/ref/RuskeyCombGen.pdf"
@@ -65,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 207,
    "metadata": {
     "collapsed": true
    },
@@ -114,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 208,
    "metadata": {
     "collapsed": false
    },
@@ -210,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 212,
    "metadata": {
     "collapsed": true
    },
@@ -228,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 213,
    "metadata": {
     "collapsed": false
    },
@@ -237,7 +241,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Solution computed in 3.2474 secs:\n",
+      "Solution computed in 0:00:03.204676 time:\n",
       "|Q| | | | | | | | | | | | | | | | | | | |\n",
       "| | | |Q| | | | | | | | | | | | | | | | |\n",
       "| |Q| | | | | | | | | | | | | | | | | | |\n",
@@ -259,7 +263,7 @@
       "| | | | | | | | | | | | | |Q| | | | | | |\n",
       "| | | | | | | | | |Q| | | | | | | | | | |\n",
       "\n",
-      "Solution computed in 8.893e-05 secs:\n",
+      "Solution computed in 0:00:00.000101 time:\n",
       "|Q| | | | | | | | | | | | | | | | | | | |\n",
       "| | | |Q| | | | | | | | | | | | | | | | |\n",
       "| |Q| | | | | | | | | | | | | | | | | | |\n",
@@ -281,7 +285,7 @@
       "| | | | | | | | | | | | | |Q| | | | | | |\n",
       "| | | | | | | | | |Q| | | | | | | | | | |\n",
       "\n",
-      "Solution computed in 0.63178 secs:\n",
+      "Solution computed in 0:00:00.554210 time:\n",
       "|Q| | | | | | | | | | | | | | | | | | | |\n",
       "| | | |Q| | | | | | | | | | | | | | | | |\n",
       "| |Q| | | | | | | | | | | | | | | | | | |\n",
@@ -303,7 +307,7 @@
       "| | | | | | | | |Q| | | | | | | | | | | |\n",
       "| | | | | | | | | | |Q| | | | | | | | | |\n",
       "\n",
-      "Solution computed in 0.2793 secs:\n",
+      "Solution computed in 0:00:00.273031 time:\n",
       "|Q| | | | | | | | | | | | | | | | | | | |\n",
       "| | | |Q| | | | | | | | | | | | | | | | |\n",
       "| |Q| | | | | | | | | | | | | | | | | | |\n",
@@ -325,7 +329,7 @@
       "| | | | | | | | | |Q| | | | | | | | | | |\n",
       "| | | | | | | |Q| | | | | | | | | | | | |\n",
       "\n",
-      "Solution computed in 0.085886 secs:\n",
+      "Solution computed in 0:00:00.075748 time:\n",
       "|Q| | | | | | | | | | | | | | | | | | | |\n",
       "| | | |Q| | | | | | | | | | | | | | | | |\n",
       "| |Q| | | | | | | | | | | | | | | | | | |\n",
@@ -352,8 +356,8 @@
    ],
    "source": [
     "for i in range(5):\n",
-    "    with timing(lambda: next(more_queens)) as (s, start, end):\n",
-    "        print(\"Solution computed in {:.5} secs:\\n{}\".format(end-start, pretty(s)))"
+    "    with timing(lambda: next(more_queens)) as (s, elapsed_time):\n",
+    "        print(\"Solution computed in {} time:\\n{}\".format(elapsed_time, pretty(s)))"
    ]
   },
   {
@@ -377,7 +381,7 @@
     "     \\hline\n",
     "     \\vdots & \\vdots & \\vdots & \\ddots & \\vdots \\\\\n",
     "     \\hline\n",
-    "     r-1 & 2r-1 & \\ldots & \\ldots & rc-1\\\\\n",
+    "     r-1 & 2r-1 & 3r-1 & \\ldots & rc-1\\\\\n",
     "     \\end{array}\n",
     "     $$\n",
     "     is represented by an *integer* with $rc$ bits; this is because we want to use *bit masking* techniques and\n",
@@ -588,8 +592,6 @@
     "    table = {}\n",
     "    for s, _, _, iso in sol:\n",
     "        table.update({(r,c):s.name for r, c in iso})\n",
-    "    \n",
-    "    # box symbols: ─ │ ├ ┤ ┬ ┴ ┼ ┌ ┐ └ ┘\n",
     "    \n",
     "    rows, cols = dim\n",
     "    \n",
