Refactor and add docstrings in graycode functions.

--- a/tutorials/graycodes.ipynb
+++ b/tutorials/graycodes.ipynb
@@ -17,9 +17,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 21,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -252,7 +252,7 @@
     "\n",
     "observe that the former and latter rows stay steal, only the middle is shifted to the right. \n",
     "\n",
-    "Python function `gray_code` that implements arguments above is pretty elegant:"
+    "Python function `graycode_unrank` that implements arguments above is pretty elegant:"
    ]
   },
   {
@@ -266,13 +266,16 @@
      "data": {
       "text/markdown": [
        "```python\n",
-       "def gray_code(k): \n",
+       "def graycode_unrank(k): \n",
        "    \"\"\"\n",
+       "    Return the *graycode* in position `k` respect binary reflected construction.\n",
+       "    \n",
+       "    Of course, argument `k` should be a *non-negative* integer.\n",
        "\n",
        "    Examples\n",
        "    ========\n",
        "\n",
-       "    >>> bin(gray_code(0b101100110))\n",
+       "    >>> bin(graycode_unrank(0b101100110))\n",
        "    '0b111010101'\n",
        "\n",
        "    \"\"\"\n",
@@ -291,36 +294,77 @@
     }
    ],
    "source": [
-    "python_code(gray_code)"
+    "python_code(graycode_unrank)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The following are Gray codes we saw in the above example, namely all of them of length 3:"
+    "The following is an iterable of Gray codes we saw in the example above, namely all of them of length 3, pretty-printed:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 25,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "['0b000', '0b001', '0b011', '0b010', '0b110', '0b111', '0b101', '0b100']"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0b000\n",
+      "0b001\n",
+      "0b011\n",
+      "0b010\n",
+      "0b110\n",
+      "0b111\n",
+      "0b101\n",
+      "0b100\n"
+     ]
     }
    ],
    "source": [
-    "list(gray_codes(3, justified=True))"
+    "print('\\n'.join(list(binary_reflected_graycodes(3, justified=True))))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Moreover, we have implemented an *operator* which allows us to process an iterable of codes pairwise, possibly plugging-in custom behavior via `lambda` expressions. Previous table with the position of the changing-bit can be rebuilt as follows:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0b0\t0b0\t0\n",
+      "0b1\t0b1\t1\n",
+      "0b10\t0b11\t0\n",
+      "0b11\t0b10\t2\n",
+      "0b100\t0b110\t0\n",
+      "0b101\t0b111\t1\n",
+      "0b110\t0b101\t0\n",
+      "0b111\t0b100\t2\n"
+     ]
+    }
+   ],
+   "source": [
+    "from itertools import count\n",
+    "\n",
+    "example_graycodes = binary_reflected_graycodes(length=3)\n",
+    "for c, (o, s, p, r) in zip(count(), binary_reflected_graycodes_reduce(example_graycodes)):\n",
+    "    print('{}\\t{}\\t{}'.format(bin(c), bin(o), p))"
    ]
   },
   {
