Refine `is_on` bit manipulation function and write *direct* graycodes generation in the tutorial.

--- a/tutorials/graycodes.ipynb
+++ b/tutorials/graycodes.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 39,
    "metadata": {
     "collapsed": false
    },
@@ -126,20 +126,20 @@
     "# Binary Reflected Gray Codes\n",
     "\n",
     "Here we introduce combinatorial Gray codes, which are lists of combinatorial\n",
-    "objects in which successive objects are *close* in some sense. Quoting Ruskey:\n",
+    "objects such that are pairwise *close*. Quoting Ruskey:\n",
     "\n",
     ">Suppose that we wish to list all $2^n$ bitstrings of length $n$, in such a way that each bitstring\n",
     "differs from its predecessor by a single bit. Such lists are called *binary Gray codes*, named\n",
     "after Frank Gray who used them in a patent he obtained for \"pulse code communication\".\n",
     "\n",
-    "Introducing *reflection* to have a recursive definition:\n",
+    "Using *reflection*, it yields a recursive definition:\n",
     "\n",
     ">There is a very simple recursive algorithm for generating one particular Gray code, known\n",
     "as the *binary reflected Gray code (BRGC)*.\n",
     "The binary reflected Gray code on *n* elements, $\\textbf{G}_n$, is defined recursively by letting\n",
     "$\\textbf{G}_0$ be the single element sequence containing the empty string $\\epsilon$, \n",
     "and letting $\\textbf{G}_n$ be the list obtained by prefixing each element of $\\textbf{G}_{n−1}$ \n",
-    "with a 0 and then prefixing each element of $\\textbf{G}_{n−1}$ with a 1. For example: \n",
+    "with a 0 and then prefixing each element of $\\textbf{G}_{n−1}$ *in reversed order* with a 1. For example: \n",
     "$\\textbf{G}_1 = (0,1), \\textbf{G}_2 = (00, 01, 11, 10), \\textbf{G}_3 = (000, 001, 011, 010, 110, 111, 101, 100)$.\n",
     "The $n$-dimensional hypercube, or $n$-cube, $Q_n$ , may be considered as the graph whose\n",
     "vertices consist of all bitstrings of length $n$ and where two vertices are joined by an edge\n",
@@ -153,13 +153,11 @@
     "\n",
     ">Now suppose that the disks are numbered $0, 1, \\ldots , n-1$ where 0 is the smallest disk and\n",
     "$n-1$ is the largest disk. Let $T_n$ denote the sequence of disks that are moved in solving the\n",
-    "$n$ disk Towers of Hanoi problem. Looking at the following table, $T_3 = 0, 1, 0, 2, 0, 1, 0$. From\n",
-    "the recursive solution to the Towers of Hanoi problem we see that $T_1$ = $1$ and in general\n",
-    "$T_{n+1} = T_n , n + 1, T_n$ . As a notational convenience we will now assume that the Gray code\n",
-    "bitstrings are indexed $g_{n−1} \\ldots g_0$ . It turns out that the number at position k in T_n, zero-based, \n",
+    "$n$ disk Towers of Hanoi problem. Looking at the following table, $T_3 = 0, 1, 0, 2, 0, 1, 0$. \n",
+    "It turns out that the number at position k in T_n, zero-based, \n",
     "is the index of the bit that changes in the bitstring of $\\textbf{G}_n$ in position $k$, \n",
-    "and that this is equal to the position\n",
-    "of the rightmost 0, counting from the right, in the bitstring at position $k$ when counting in binary.\n",
+    "and that this is equal to the position $k$ \n",
+    "of the rightmost 0, counting from the right, in the bitstring when counting in binary.\n",
     "The sequence $T_n$ is called the transition sequence of the BRGC. Every Hamilton path on\n",
     "the $n$-cube has a transition sequence and these paths are often specified by their transition\n",
     "sequences.\n",
@@ -176,7 +174,9 @@
     "110 & 101 & 0 \\\\\n",
     "111 & 100 &  \\\\\n",
     "\\end{array}\n",
-    "$$"
+    "$$\n",
+    "\n",
+    "We will first derive two functions, for *ranking* and *unranking* gray codes and, lately, a function to efficiently compute the position of the rightmost 0 when counting in binary."
    ]
   },
   {
@@ -184,6 +184,9 @@
    "metadata": {},
    "source": [
     "## *Ranking* Gray codes\n",
+    "\n",
+    "As a notational convenience we will now assume that the Gray code\n",
+    "bitstrings are indexed $g_{n} \\ldots g_1$, in contrast to the usual 0-based indexing.\n",
     "\n",
     "Let $r$, standing for *rank*, be a function defined inductively as follows:\n",
     "$$\n",
@@ -250,14 +253,21 @@
     "\\end{array}\n",
     "$$\n",
     "\n",
-    "observe that the former and latter rows stay steal, only the middle is shifted to the right. \n",
+    "observe that the former and latter rows stay steal, only the middle is shifted to the right."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Indirect generation\n",
     "\n",
-    "Python function `graycode_unrank` that implements arguments above is pretty elegant:"
+    "Python function `graycode_unrank` that implements arguments above is pretty elegant; however, this generation is *indirect* since it does not provide the *position* of the changing bit among adjacent codes:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 26,
    "metadata": {
     "collapsed": false
    },
@@ -288,7 +298,7 @@
        "<IPython.core.display.Markdown object>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -306,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 27,
    "metadata": {
     "collapsed": false
    },
@@ -339,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 28,
    "metadata": {
     "collapsed": false
    },
@@ -365,6 +375,94 @@
     "example_graycodes = binary_reflected_graycodes(length=3)\n",
     "for c, (o, s, p, r) in zip(count(), binary_reflected_graycodes_reduce(example_graycodes)):\n",
     "    print('{}\\t{}\\t{}'.format(bin(c), bin(o), p))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Direct generation\n",
+    "\n",
+    "It is possible to write a function `graycodes_direct` which provides codes and changing-bit positions in parallel, here is the code:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "```python\n",
+       "def graycodes_direct(n):\n",
+       "    \"\"\"\n",
+       "    Returns an iterable of Gray codes of length `n`, each paired with changing-bit positions.\n",
+       "\n",
+       "    \"\"\"\n",
+       "    code = 0\n",
+       "\n",
+       "    def gen(i):\n",
+       "        nonlocal code\n",
+       "        if i > -1:\n",
+       "            yield from gen(i-1)\n",
+       "            code = toggle_bit(code, i)\n",
+       "            yield code, i\n",
+       "            yield from gen(i-1)\n",
+       "             \n",
+       "\n",
+       "    yield code, 0\n",
+       "    yield from gen(n-1)\n",
+       "\n",
+       "```"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "python_code(graycodes_direct)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "and can be used to build the same example table; observe that the changing-bit positions sequence is shifted *forward* by one:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0b0\t0b0\t0\n",
+      "0b1\t0b1\t0\n",
+      "0b10\t0b11\t1\n",
+      "0b11\t0b10\t0\n",
+      "0b100\t0b110\t2\n",
+      "0b101\t0b111\t0\n",
+      "0b110\t0b101\t1\n",
+      "0b111\t0b100\t0\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i, (code, changingbit_position) in zip(count(), graycodes_direct(3)):\n",
+    "    print('{}\\t{}\\t{}'.format(bin(i),bin(code), changingbit_position))"
    ]
   },
   {
@@ -429,7 +527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 40,
    "metadata": {
     "collapsed": false
    },
@@ -438,19 +536,21 @@
      "data": {
       "text/markdown": [
        "```python\n",
-       "def gray_position(g):\n",
+       "def graycode_rank(g):\n",
        "    \"\"\"\n",
+       "    Returns the *position* (namely *ranking*) of graycode `g` respect binary reflected construction.\n",
        "\n",
        "    Examples\n",
        "    ========\n",
        "\n",
-       "    >>> bin(gray_position(0b111010101))\n",
+       "    >>> bin(graycode_rank(0b111010101))\n",
        "    '0b101100110'\n",
        "\n",
        "    \"\"\"\n",
        "    k=0\n",
        "    for i in reversed(range(g.bit_length())):\n",
        "        k ^= set_all(i+1) * is_on(g, i)\n",
+       "\n",
        "    return k\n",
        "\n",
        "```"
@@ -459,13 +559,13 @@
        "<IPython.core.display.Markdown object>"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "python_code(gray_position)"
+    "python_code(graycode_rank)"
    ]
   },
   {
@@ -477,7 +577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 41,
    "metadata": {
     "collapsed": false
    },
@@ -486,9 +586,9 @@
      "data": {
       "text/markdown": [
        "```python\n",
-       "def is_on(S, j, return_int=False): \n",
+       "def is_on(S, j): \n",
        "    \"\"\"\n",
-       "    Returns `True` if the `j`-th item of the set `S` is on.\n",
+       "    Returns 1 if and only if the `j`-th item of the set `S` is on.\n",
        "\n",
        "    Examples\n",
        "    ========\n",
@@ -496,11 +596,10 @@
        "    Check if the 3-th and then 2-nd item of the set is on:\n",
        "    >>> S = 0b101010\n",
        "    >>> is_on(S, 3), is_on(S, 2)\n",
-       "    (True, False)\n",
+       "    (1, 0)\n",
        "\n",
        "    \"\"\"\n",
-       "    res = bool(S & (1 << j))\n",
-       "    return int(res) if return_int else res\n",
+       "    return (S & (1 << j)) >> j\n",
        "\n",
        "def set_all(n):\n",
        "    return (1 << n) - 1\n",
@@ -511,72 +610,13 @@
        "<IPython.core.display.Markdown object>"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "python_code(is_on, set_all)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "---\n",
-    "## Scratchpad"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/markdown": [
-       "```python\n",
-       "a = lambda b: b + 1\n",
-       "\n",
-       "```"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Markdown object>"
-      ]
-     },
-     "execution_count": 35,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "a = lambda b: b + 1\n",
-    "python_code(a)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['0b0', '0b1', '0b11', '0b10', '0b110', '0b111', '0b101', '0b100']"
-      ]
-     },
-     "execution_count": 31,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "list(map(bin, rank_gray_code_direct(3)))"
    ]
   },
   {
