Write and commented *loopless counting* and used for graycode generation.

--- a/tutorials/graycodes.ipynb
+++ b/tutorials/graycodes.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 70,
    "metadata": {
     "collapsed": false
    },
@@ -316,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 55,
    "metadata": {
     "collapsed": false
    },
@@ -349,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 56,
    "metadata": {
     "collapsed": false
    },
@@ -388,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 57,
    "metadata": {
     "collapsed": false
    },
@@ -413,7 +413,7 @@
        "            yield from gen(i-1)\n",
        "             \n",
        "\n",
-       "    yield code, 0\n",
+       "    yield code, -1\n",
        "    yield from gen(n-1)\n",
        "\n",
        "```"
@@ -422,7 +422,7 @@
        "<IPython.core.display.Markdown object>"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -440,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 58,
    "metadata": {
     "collapsed": false
    },
@@ -449,7 +449,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0b0\t0b0\t0\n",
+      "0b0\t0b0\t-1\n",
       "0b1\t0b1\t0\n",
       "0b10\t0b11\t1\n",
       "0b11\t0b10\t0\n",
@@ -463,6 +463,217 @@
    "source": [
     "for i, (code, changingbit_position) in zip(count(), graycodes_direct(3)):\n",
     "    print('{}\\t{}\\t{}'.format(bin(i),bin(code), changingbit_position))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Counting without cycles\n",
+    "\n",
+    "In this section we fullfil the last correspondence among binary counting and graycodes generation. Here we will develop a *loopless* algorithm such that, keeping track of the rightmost 0 (in the least significant part), allows to build graycodes: such tracking avoid scans to find it and break the worst cases in which that 0-bit is in the most significant part of the number. Begin defining an array $\\tau$ which is a representation of the counting number $b_{n-1}b_{n-2}\\ldots b_{1}b_{0}$, aiming to catch *0-bits positions*, defined as follows:\n",
+    "\n",
+    "$$\n",
+    "\\tau_{i} = \\left\\lbrace \n",
+    "\\begin{array}{ll}\n",
+    "i & \\text{if } b_{i}=0 \\vee b_{i-1}=1\\\\\n",
+    "\\min_{k\\in\\lbrace 1,\\ldots,n\\rbrace}{\\lbrace k: b_{k}=0 \\rbrace} & \\text{if } b_{i}=1 \\vee b_{i-1}=0\n",
+    "\\end{array} \n",
+    "\\right.\n",
+    "$$\n",
+    "\n",
+    "In words, if $b_{i}$ is 0-bit than $\\tau_{i}$ is its own position $i$, otherwise if the previous bit $b_{i-1}$ is 1-bit too, then set $\\tau_{i}=i$ again because they are in a sequence of 1 in a row. On the other hand, if bit $b_{i}$ is the last 1-bit in a sequence of ones, so $b_{i-1}=0$, then find the closer position in $\\tau$ which is zero. Follows four examples with $n-1=10$:\n",
+    "\n",
+    "$$\n",
+    "\\begin{array}{ccccccccccc||ccccccccccc}\n",
+    "b_{10} & b_9 & b_8 & b_7 & b_6 & b_5 & b_4 & b_3 & b_2 & b_1 & b_0 & \n",
+    "\\tau_{10} & \\tau_9 & \\tau_8 & \\tau_7 & \\tau_6 & \\tau_5 & \\tau_4 & \\tau_3 & \\tau_2 & \\tau_1 & \\tau_0 \\\\\n",
+    "\\hline\n",
+    "1 & 1 & 0 & 1 & 0 & 0 & 0 & 1 & 1 & 1 & 1 &   \n",
+    "    10 & \\textbf{11} & 8 & \\textbf{8} & 6 & 5 & 4 & 3 & 2 & 1 & \\textbf{4} \\\\\n",
+    "1 & 1 & 0 & 1 & 0 & 0 & 1 & 0 & 0 & 0 & 0 &   \n",
+    "    10 & \\textbf{11} & 8 & \\textbf{8} & 6 & 5 & \\textbf{5} & 3 & 2 & 1 & 0 \\\\\n",
+    "1 & 1 & 0 & 1 & 0 & 0 & 1 & 0 & 0 & 0 & 1 &   \n",
+    "    10 & \\textbf{11} & 8 & \\textbf{8} & 6 & 5 & \\textbf{5} & 3 & 2 & 1 & \\textbf{1} \\\\\n",
+    "1 & 1 & 0 & 1 & 0 & 0 & 1 & 0 & 0 & 1 & 0 &   \n",
+    "    10 & \\textbf{11} & 8 & \\textbf{8} & 6 & 5 & \\textbf{5} & 3 & 2 & \\textbf{2} & 0 \\\\\n",
+    "\\end{array}\n",
+    "$$\n",
+    "\n",
+    "where in __boldface__ are value in $\\tau$ set by the *second* clause in the definition; therefore, the changing-bit in the graycode, lying *on the same row in the table* together with the binary counter, has position $\\tau_{0}$, since it is the minimum position where a 0-bit appears in the counter.\n",
+    "\n",
+    "In order to derive an efficient function using $\\tau$ array, we study 4 cases, namely the four combinations of $b_{i+1}$ and $b_{0}$ binary values, where $\\tau_{0}=i$:\n",
+    "\n",
+    "   - $b_{i+1}=0 \\wedge b_{0}=1$:\n",
+    "   $$\n",
+    "\\begin{array}{cccccc|cccccc}\n",
+    "b_{i+1} & b_{i} & b_{i-1} & \\ldots & b_1 & b_0 & \n",
+    "\\tau_{i+1} & \\tau_i & \\tau_{i-1} & \\ldots & \\tau_1 & \\tau_0 \\\\\n",
+    "\\hline\n",
+    "0 & 0 & 1 & ones & 1 & 1 &   i+1 & i & i-1 & \\ldots & 1 & i \\\\\n",
+    "0 & 1 & 0 & zeroes & 0 & 0 &   i+1 & i+1 & i-1 & \\ldots & 1 & 0 \\\\\n",
+    "\\end{array}   \n",
+    "   $$\n",
+    "   hence the following updates take place: $\\tau_{0}\\leftarrow 0$, $\\tau_{i}\\leftarrow i+1 = \\tau_{i+1}$ and $\\tau_{i+1}\\leftarrow i+1$;\n",
+    "   \n",
+    "   - $b_{i+1}=1 \\wedge b_{0}=1$:\n",
+    "   $$\n",
+    "\\begin{array}{cccccc|cccccc}\n",
+    "b_{i+1} & b_{i} & b_{i-1} & \\ldots & b_1 & b_0 & \n",
+    "\\tau_{i+1} & \\tau_i & \\tau_{i-1} & \\ldots & \\tau_1 & \\tau_0 \\\\\n",
+    "\\hline\n",
+    "1 & 0 & 1 & ones & 1 & 1 &   j & i & i-1 & \\ldots & 1 & i \\\\\n",
+    "1 & 1 & 0 & zeroes & 0 & 0 &   i+1 & j & i-1 & \\ldots & 1 & 0 \\\\\n",
+    "\\end{array}   \n",
+    "   $$\n",
+    "   where $j = min_{k\\in\\lbrace i+2,\\ldots, n\\rbrace}{\\lbrace k: b_{k}=0\\rbrace}$; hence the following updates take place: $\\tau_{0}\\leftarrow 0$, $\\tau_{i}\\leftarrow j = \\tau_{i+1}$ and $\\tau_{i+1}\\leftarrow i+1$;\n",
+    "   \n",
+    "   - $b_{0}=0 \\wedge b_{1}=0$, so $\\tau_{0}=i=0$, hence $b_{i+1}=b_{1}$:\n",
+    "   $$\n",
+    "\\begin{array}{cc|cc}\n",
+    " b_{i+1} = b_1 & b_{i} = b_0 & \\tau_{i+1} = \\tau_1 & \\tau_{i}=\\tau_0 \\\\\n",
+    "\\hline\n",
+    " 0 & 0 &   1 & 0 \\\\\n",
+    " 0 & 1 &   1 & 1 \\\\\n",
+    "\\end{array}   \n",
+    "   $$\n",
+    "   hence the following updates take place: $\\tau_{0}\\leftarrow 0$ (implicitly), $\\tau_{i}\\leftarrow 1 = \\tau_{i+1}$ and $\\tau_{i+1}\\leftarrow 1 = i+1$;\n",
+    "   \n",
+    "   - $b_{0}=0 \\wedge b_{1}=1$, so $\\tau_{0}=i=1$, hence $b_{i+1}=b_{1}$:\n",
+    "   $$\n",
+    "\\begin{array}{cc|cc}\n",
+    " b_{i+1} = b_1 & b_{i} = b_0 & \\tau_{i+1} = \\tau_1 & \\tau_{i}=\\tau_0 \\\\\n",
+    "\\hline\n",
+    " 1 & 0 &   2 & 0 \\\\\n",
+    " 1 & 1 &   1 & 2 \\\\\n",
+    "\\end{array}   \n",
+    "   $$\n",
+    "   hence the following updates take place: $\\tau_{0}\\leftarrow 0$ (implicitly), $\\tau_{i}\\leftarrow 2 = \\tau_{i+1}$ and $\\tau_{i+1}\\leftarrow 1 = i+1$.\n",
+    "   \n",
+    "So in every case, the following assignments occur *sequentially*:\n",
+    "$$\n",
+    "\\tau_{0}\\leftarrow 0 \\\\\n",
+    "\\tau_{i}\\leftarrow \\tau_{i+1} \\\\\n",
+    "\\tau_{i+1}\\leftarrow i+1 \\\\\n",
+    "$$\n",
+    "\n",
+    "Previous argument yield the following functions quite naturally:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "```python\n",
+       "def rightmost_zeroes_in_binary_counting(n):\n",
+       "    \"\"\"\n",
+       "    I'm a generator of positions of *rightmost zeroes* in binary counting up to `2**n -1`.\n",
+       "\n",
+       "    This implements the loopless algorithm designed by Frank Ruskey; it is more\n",
+       "    efficient than natural counting and scanning for rightmost zeroes, which is CAT however.\n",
+       "\n",
+       "    Examples\n",
+       "    ========\n",
+       "\n",
+       "    Generate the transition sequence to solve the Hanoi tower problem with 3 disks:\n",
+       "    >>> list(rightmost_zeroes_in_binary_counting(3))\n",
+       "    [0, 1, 0, 2, 0, 1, 0]\n",
+       "    \n",
+       "    according to the result, we have to move first disk 0, then disk 1, then disk 0 again,\n",
+       "    then disk 2, next disk 0, next disk 1 and, finally, disk 0; obviously, recipient peg\n",
+       "    is according to the rule of the game.\n",
+       "\n",
+       "    \"\"\"\n",
+       "    tau = list(range(n+1))\n",
+       "\n",
+       "    while tau[0] != n:\n",
+       "        yield tau[0]\n",
+       "        i = tau[0]\n",
+       "        tau[0], tau[i], tau[i+1] = 0, tau[i+1], i+1\n",
+       "\n",
+       "def graycodes_by_transition_sequence(positions):\n",
+       "    \"\"\"\n",
+       "    I'm a generator of graycodes, flipping bits according to transitions sequence `positions`.\n",
+       "\n",
+       "    \"\"\"\n",
+       "\n",
+       "    graycode = 0\n",
+       "\n",
+       "    yield graycode, -1\n",
+       "\n",
+       "    for p in positions:\n",
+       "        graycode = toggle_bit(graycode, p)\n",
+       "        yield graycode, p\n",
+       "\n",
+       "```"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "python_code(rightmost_zeroes_in_binary_counting, graycodes_by_transition_sequence)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 1, 0, 2, 0, 1, 0]"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(rightmost_zeroes_in_binary_counting(3))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0b0\t0b0\t-1\n",
+      "0b1\t0b1\t0\n",
+      "0b10\t0b11\t1\n",
+      "0b11\t0b10\t0\n",
+      "0b100\t0b110\t2\n",
+      "0b101\t0b111\t0\n",
+      "0b110\t0b101\t1\n",
+      "0b111\t0b100\t0\n"
+     ]
+    }
+   ],
+   "source": [
+    "graycodes_with_positions = graycodes_by_transition_sequence(rightmost_zeroes_in_binary_counting(3))\n",
+    "for b, (code, p) in zip(count(), graycodes_with_positions):\n",
+    "    print('{}\\t{}\\t{}'.format(bin(b), bin(code), p))"
    ]
   },
   {
